【功能优化】短信：华为云的实现优化